# llm_p_Tereshchenko_m25_255

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py  routes_auth.py  routes_chat.py
app/core/: config.py  errors.py  security.py
app/db/: base.py  models.py  session.py
app/repositories/: chat_messages.py  users.py
app/schemas/: chat.py
app/services/: openrouter_client.py
app/usecases/: auth.py  chat.py
